Tue Jan 20 15:30:08 1998  Mario Weilguni  <mario@loki.valhalla.at>

	* runtests.cpp: gpppdata is now saved after modifications in
	runtests(), and the default log viewer is set correctly

Tue Jan 20 03:10:35 1998  Bernd Johannes Wuebben  <wuebben@math.cornell.edu>

	* tried to get the docking window to display tooltip with transfer
	bytes statistice. Failed. Need to contact Matthias about it.
       
	* Removed the 'Dock' button. It is superfluous. Use the window
	close button to hide the window.

	* fixed the flicker problem that was reintroduced in pppstatdlg.cpp

	* fixed ( hopefully ) a hangup problem on busy redial caused
	by the  modem_in_connect_state varible in connect.cpp

Mon Jan 19 17:51:16 1998  Mario Weilguni  <mweilguni@sime.com>

	* main.cpp: the setup dialog is now created on demand. Since in
	most cases we only dial out, creating the setup dialog is a waste
	of CPU and memory. This reduces memory by approx 200KB.

	* geometry managment added to PPP statistic window

	* tried to minimize dependencies on "main.h" by removing unneeded
	#includes

	* removed homedir.(cpp|h). It can be easily replaced with
	QDir::homeDirPath().

	* before doing anything else, a few tests will be started to
	ensure that i.e. the pppd binary is found...

Mon Jan 19 12:05:00 1998  Harri Porten  <porten@tu-harburg.de>

	* set default for get_dock_into_panel() to false as safety
	  precaution
	
	* introduced docking. It allows kppp to be run as a small
 	  animated icon on the panel. Clicking on the icon with the left
	  mouse button restores the regular window. The right button
 	  opens up a popup menu with other options.

Mon Jan 19 04:46:39 1998  Bernd Johannes Wuebben  <wuebben@math.cornell.edu>

	* reset PHONENUMBER_SIZE to 60. People with phone cards need lots
	space.

Fri Jan 16 21:41:08 1998  Stephan Kulow  <coolo@kde.org>

	* some improvements to the toplevel Makefile.am. rpath is very
	important for setuid programs
